# AQI

./: .gitignore  2.0.0  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLES.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  README_MAIN.md  agent.py  docker-compose.yml  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  run_all_demos.py  verification.py
.github/workflows/: ci.yml
1.TES/: README.md  demo.py
1.TES/data/: asmaullah.json
1.TES/src/: __init__.py  theological_embedding.py
2.NBCD/: README.md  demo.py
2.NBCD/data/: hadith_causal_rules.json
2.NBCD/src/: __init__.py  causal_graph.py
3.DNO/: README.md  demo.py
3.DNO/data/: asmaul_husna.json
3.DNO/src/: __init__.py  names_optimizer.py
4.EPM/: README.md  demo.py
4.EPM/data/: signatures_of_the_hour.json
4.EPM/src/: __init__.py  prophecy_tracker.py
5.PDI-GPT/: README.md  demo.py
5.PDI-GPT/data/: dream_symbols.json
5.PDI-GPT/src/: __init__.py  dream_engine.py
api/: server.py
configs/: default.yaml  dno.yaml  epm.yaml  nbcd.yaml  pdi_gpt.yaml  tes.yaml
data_pipeline/: __init__.py
data_pipeline/loaders/: __init__.py
data_pipeline/validators/: __init__.py
docs/: api.rst  conf.py  dno.rst  epm.rst  index.rst  installation.rst  intro.rst  nbcd.rst  pdi-gpt.rst  quranic_principles.rst  tes.rst  usage.rst
evaluation/: metrics.py
integration/: __init__.py  pipeline.py
quranic_principles/: __init__.py  hidden_patterns.py  literary_devices.py  mathematical_codes.py  ontological_hierarchy.py  scientific_references.py
research/: .gitignore  LICENSE  Makefile  README.md  README_MAIN.md  compile.bat  course_syllabus.md  dpo_integration.md  interdisciplinary_validation_framework.md  lifelong_social_learning.md  maqasid_ethical_governance.md  mizan_metrics.md  nur_xai.md  paper.tex  pitch_deck.md  policy_brief.md  references.bib  report.html  requirements.txt  staged_learning_architecture.md  synthesis_report.md  tawhid_ai_framework.md
research/examples/: demo_mizan.py  demo_tawhid.py
research/findings/: README.md
research/sources/: README.md
research/src/: pyproject.toml
research/src/mizan_fairness/: __init__.py  metrics.py  regularizer.py
research/src/tawhid_unifier/: __init__.py  core.py  fusion.py  losses.py
research/src/tawhid_unifier/tests/: test_core.py
tests/1.TES/: test_theological_embedding.py
tests/2.NBCD/: test_causal_graph.py
tests/3.DNO/: test_names_optimizer.py
tests/4.EPM/: test_prophecy_tracker.py
tests/5.PDI-GPT/: test_dream_engine.py
training/: __init__.py  train_tes.py
