[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divine-ai-suite"
version = "0.1.0"
description = "Five revolutionary AI frameworks inspired by Islamic epistemology: TES, NBCD, DNO, EPM, PDI-GPT"
readme = "README_MAIN.md"
license = { text = "MIT" }
authors = [
    { name = "Atharia AGI Team", email = "team@atharia.ai" }
]
keywords = ["AI", "Islamic AI", "theological embedding", "causal discovery", "divine names", "prophecy tracking", "dream interpretation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "networkx>=3.2",
    "transformers>=4.35",
    "tqdm",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[project.urls]
Homepage = "https://github.com/atharia-agi/tawhid-engine"
Documentation = "https://atharia-agi.github.io/tawhid-engine"
Repository = "https://github.com/atharia-agi/tawhid-engine.git"
"Issue Tracker" = "https://github.com/atharia-agi/tawhid-engine/issues"

[project.scripts]
divine-ai = "agent:main"
run-demos = "run_all_demos:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["1.TES.src", "2.NBCD.src", "3.DNO.src", "4.EPM.src", "5.PDI-GPT.src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
